Fix painting of selection decoration over grids

Implement a priority API for the decoration and make
selections be painted on the top of everything :)

BUG:362662